# exchange_quotation_listener

./: Cargo.toml  log_desc.txt  log_readme.md  readme.md
src/: account.rs  bar.rs  constant.rs  draw.rs  ex_info.rs  filters.rs  history_data.rs  kline.rs  main.rs  main.rs_bak1  market_cap_list.rs  order.rs  strategy.rs  strategy2.rs  strategy3.rs  utils.rs
src/strategy/: mod.rs
src/strategy/buy/: mod.rs
src/strategy/sell/: a_strong_signal.rs  a_strong_signal_v2.rs  a_very_strong_signal.rs  a_very_strong_signal_v2.rs  mod.rs  raise_is_stop.rs  sequential_take_order.rs  start_go_down.rs  three_continuous_signal.rs  two_middle_signal.rs  two_middle_signal_v2.rs
