[package]
name = "exchange_quotation_listener"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde_json = { version = "1.0", optional = true }
serde = { version = "1.0.104", features = ["derive"] }
chrono = "0.4.23"
hmac = "0.12.1"
sha2 = "0.10.6"
rust_decimal = "0.11.3"
env_logger = "0.10.0"
log = "0.4.8"


[features]
json = ["serde_json"]

